made minor changes that fixed the alignment of the second image

--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -100,7 +100,7 @@ nav a {
 	text-align: center;
 	width: 49%;
 	/* border: 2px solid green; */
-	margin: 10px;
+	/* margin: 10px; */
 	padding-bottom: 50px;
 }
 
@@ -117,6 +117,8 @@ nav a {
 
 .circleImage {
 	display: inline-block;
+	background: rgba(0, 0, 0, .2);
+	margin-top: 20%;
 	/* border: 2px solid yellow; */
 }
 
